# rust-concepts

./: README.md
actix-api/: Cargo.toml
actix-api/src/: handlers.rs  main.rs  models.rs  response.rs
actix-api/src/static/: index.html  styles.css
actix-gql/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
actix-gql/src/: main.rs
actix-gql/src/db/: mod.rs  todo_item.rs  todo_list.rs
actix-gql/src/graphql/: mod.rs  mutation.rs  query.rs
actix-gql/src/handler/: graphiql.rs  graphql.rs  mod.rs
actix-gql/src/schema/: model.rs
actix-gql/static/: 404.html  index.css  index.html
basics/: Cargo.toml
basics/src/: borrow.rs  compund.rs  control.rs  errors.rs  function.rs  generics.rs  lifetime.rs  main.rs  mutable.rs  options.rs  scalar.rs  structs.rs  traits.rs
bb8-pg/: Cargo.toml  README.md
bb8-pg/src/: main.rs  pg_db.rs  todo_item.rs  todo_list.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
greetings/consumer/: Cargo.toml
greetings/consumer/src/: main.rs
hello-world/: hw.rs
hyper-api/: Cargo.toml
hyper-test/: Cargo.toml  README.md
hyper-test/src/: main.rs
hyper-test/src/routes/: home.rs  json.rs  mod.rs  not_found.rs
hyper-test/src/views/: home.html
invaders/: Cargo.toml  README.md
invaders/src/: main.rs
json-db/: Cargo.toml  README.md
json-db/db/: transaction.json
json-db/src/: main.rs  transaction.rs
lifetime/: Cargo.toml
lifetime/src/: main.rs
load-tests/: package-lock.json  package.json
load-tests/autocannon/: load_test_actix.js  requests.js  utils.js
load-tests/report/: db.json
mars_calc/: Cargo.toml  README.md
mars_calc/src/: main.rs
pin-lock/: Cargo.toml
pin-lock/src/: main.rs
rocket-api/: Cargo.toml  README.md
rocket-api/src/: main.rs
sqlx-pg/: Cargo.toml  README.md
sqlx-pg/src/: main.rs
sqlx-pg/src/pg_db/: cnn.rs  main.rs  todo_list.rs
tcp-server/: Cargo.toml  README.md
tcp-server/public/: hello.html  index.html
tcp-server/src/: main.rs  server.rs
tcp-server/src/http/: error.rs  handler.rs  method.rs  mod.rs  query_string.rs  request.rs
tcp-server/src/http/response/: header.rs  mod.rs  status.rs
tls-demo/: Cargo.toml  README.md
tls-demo/src/: main.rs
tls-demo/static/: index.html
todo-actix/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
todo-actix/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs
todo-actix/tests/: load_test.js  load_test_1595768399002.json  package-lock.json  package.json
traits/: Cargo.toml
traits/src/: as_param.rs  basic.rs  extending.rs  into.rs  main.rs
