[package]
name = "actix-api"
version = "0.0.1"
authors = ["Dusan Mijatovic (PC2016) <d.mijatovic@dv4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.1"
serde = "1"
serde_json = "1"
futures = "0.3.5"
log = "0"
pretty_env_logger = "0"
