[package]
name = "hyper-test"
version = "0.1.0"
authors = ["Dusan Mijatovic (PC2016) <d.mijatovic@dv4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "1.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"